# aegis

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json
.codex/environments/: environment.toml
.codex/skills/aegis-sensor-build/: SKILL.md
.codex/skills/aegis-sensor-build/agents/: openai.yaml
common/: CMakeLists.txt
common/include/aegis/allocators/: pool_allocator.h
common/include/aegis/debug/: debug.h
common/src/debug/: debug.cpp
common/test/: CMakeLists.txt  pool_allocator_stress_test.cpp  pool_allocator_test.cpp  pool_allocator_test_utils.h
docs/: testing.md
sensor/: AGENTS.md  CMakeLists.txt  CMakePresets.json
sensor/docs/: build.md  codex-setup.md
sensor/docs/adr/: 0001-single-etw-session.md  0002-durable-packed-event-queue.md  0003-win32-no-internet-boundary.md
sensor/docs/architecture/: coding-boundaries.md  controller-boundary.md  durable-queue.md  telemetry-schema.md  win32-etw-pipeline.md
sensor/tools/: invoke-msvc-cmake.ps1
sensor/win32/: CMakeLists.txt  main.cpp
sensor/win32/include/etw/: etw_allocator.h  etw_session.h  event_record_snapshot.h  provider_registry.h  raw_event_sink.h  self_test_provider.h  stdout_event_sink.h
sensor/win32/include/etw/allocators/: event_record_allocator.h  handle.h  handle_fwd.h
sensor/win32/include/etw/event_sinks/: etw_event_sink.h  pool_event_sink.h  stdout_event_sink.h
sensor/win32/include/etw/events/: extended_data.h  handle.h  handle_fwd.h  snapshot.h  snapshot_factory.h
sensor/win32/src/: etw_allocator.cpp  etw_session.cpp  event_record_snapshot.cpp  provider_registry.cpp  self_test_provider.cpp  stdout_event_sink.cpp
sensor/win32/src/allocators/: event_record_allocator.cpp
sensor/win32/src/event_sinks/: pool_event_sink.cpp  stdout_event_sink.cpp
sensor/win32/src/events/: extended_data.cpp  snapshot_factory.cpp
